Inicio do repositório externo.

--- a/src/br/com/nextlevel/view/TelaClientes.form
+++ b/src/br/com/nextlevel/view/TelaClientes.form
@@ -89,12 +89,12 @@
                                       <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
-                                      <Group type="103" groupAlignment="0" attributes="0">
+                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                           <Component id="jComboBox1" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Component id="ClienteIdentificadorCEP" min="-2" max="-2" attributes="0"/>
-                                          <Component id="ClienteIdentificadorRUA" min="-2" max="-2" attributes="0"/>
+                                          <Component id="ClienteIdentificadorCEP" pref="86" max="32767" attributes="0"/>
+                                          <Component id="ClienteIdentificadorRUA" alignment="0" max="32767" attributes="0"/>
                                       </Group>
-                                      <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Component id="jButton2" min="-2" max="-2" attributes="0"/>
                                           <Group type="102" attributes="0">
